deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ${SERVICE_NAME}
  namespace: ${K8S_NAMESPACE}

  labels:
    app.kubernetes.io/name: ${SERVICE_NAME}
    app.kubernetes.io/instance: ${SERVICE_NAME}
    app.kubernetes.io/component: backend

spec:
  type: ${SERVICE_TYPE}

  selector:
    app.kubernetes.io/instance: ${SERVICE_NAME}

  ports:
    - name: http
      port: ${SERVICE_PORT}
      targetPort: ${CONTAINER_PORT}
      protocol: TCP
